# second-brain

./: .gitignore  AUDIT.md  CLAUDE.md  FEATURES.md  README.md  pyproject.toml
.github/workflows/: test.yml
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
browser-extension/content/: chatgpt.js  common.js  deepseek.js  gemini.js  grok.js  perplexity.js
src/secondbrain/: agenda.py  ai_audit.py  backlinks.py  backup.py  briefing.py  budget.py  chat.py  cli.py  conditional_reminders.py  config.py  connections.py  daemon.py  daily_brief.py  dashboard.py  db.py  digest.py  email_assist.py  embedder.py  entities.py  eod_wrapup.py  event_briefing.py  followups.py  followups_ops.py  gift_ideas.py  health.py  health_checks.py  image_embedder.py  imager.py  indexer.py  local_llm.py  mcp_server.py  meeting_capture.py  meeting_prep.py  meeting_thanks.py  memory.py  notifications.py  notify.py  pdf_annotations.py  people.py  personal.py  (+26 more)
src/secondbrain/connectors/: __init__.py  _google_oauth.py  bluesky.py  browser.py  calendar.py  canvas.py  chat_history.py  github.py  gmail.py  google_calendar.py  google_drive.py  hacker_news.py  imap_email.py  imessage.py  jobs.py  linear.py  mastodon.py  news.py  notion.py  obsidian.py  oura.py  pocket.py  readwise.py  reddit.py  rss.py  slack.py  substack.py  x_archive.py
tests/: README.md  conftest.py  test_backlinks.py  test_budget.py  test_canvas_apply_resume.py  test_capture.py  test_chat_features.py  test_config.py  test_connector_parsers.py  test_connectors.py  test_daily_brief.py  test_dashboard_pages.py  test_db.py  test_digest.py  test_email_assist.py  test_email_voice.py  test_event_briefings.py  test_external_tools.py  test_indexer.py  test_meeting_thanks.py  test_memory.py  test_oura.py  test_pdf_annotations.py  test_people.py  test_personal.py  test_phase33_34.py  test_phase_polish_v3.py  test_polish_v3_round4.py  test_presets_and_jobs.py  test_reading_queue.py  test_round10.py  test_round11.py  test_round12.py  test_round13.py  test_round14.py  test_round15.py  test_round16.py  test_round17.py  test_round18.py  test_round19.py  (+20 more)
