[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.0.1"
description = "Personal knowledge base that auto-ingests files and exposes them to AI assistants over MCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ben Jordan" }]
dependencies = [
    "watchdog>=4.0",
    "markitdown[all]>=0.0.1a3",
    "sqlite-vec>=0.1.6",
    "mcp>=1.0",
    "typer>=0.12",
    "voyageai>=0.3",
    "platformdirs>=4.0",
    "rich>=13.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
local = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
secondbrain = "secondbrain.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/secondbrain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
